# ReactXSalvo

./: Readme.md  build.bat  build.sh  bun-build.bat  bun-build.sh  react.smm
frontend/: .gitignore  api-gen.ps1  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  uno.config.ts  vite.config.ts
frontend/pages/: App.tsx
frontend/src/: App.tsx  ErrorBoundary.tsx  Root.tsx  Routers.tsx  TravelPlan.tsx  Tutorial.tsx  index.css  main.tsx  places.ts
frontend/src/api/: hello.js  hello.ts  request.ts
frontend/src/layout/: ChangeThemeButton.tsx  CollapsedButton.tsx  Header.tsx  Layout.tsx  UserBadge.tsx
frontend/src/pages/: Home.tsx  Login.tsx  User.tsx
frontend/src/services/: Api.ts  data-contracts.ts
frontend/src/store/: index.ts  themeSlice.ts  userSlice.ts
frontend/src/types/: antd.ts
server/: Cargo.toml  config.toml
server/crates/test_crates/: Cargo.toml
server/sea_orm_ext/: Cargo.toml
server/sea_orm_ext/src/: lib.rs
server/sea_orm_ext_macro/: Cargo.toml
server/sea_orm_ext_macro/src/: insert_active_model.rs  insert_model.rs  lib.rs
server/src/: cli.rs  error.rs  lib.rs  main.rs
server/src/api/: auth.rs  menu.rs  menu_element.rs  mod.rs  user.rs
server/src/common/: error.rs  mod.rs
server/src/config/: log_config.rs  mod.rs
server/src/db/: mod.rs
server/src/hoops/: auth.rs  jwt.rs
server/src/model/: menu.rs  menu_element.rs  mod.rs  role.rs  role_user.rs  user.rs
server/src/routers/: auth.rs  mod.rs  user.rs
server/src/utils/: mod.rs
server/system_models/: Cargo.toml
server/system_models/src/: lib.rs  menu.rs  menu_element.rs  role.rs  role_menu.rs  role_menu_element.rs  role_user.rs  user.rs
