[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[workspace.dependencies]
salvo = { version = "0.78", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
test_crates = { path = "crates/test_crates" }
time = "0.3"
tokio = { version = "1", features = ["macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "time"] }
clap = "4.5"
validator = { version = "0.20", features = ["derive"] }
ulid = "1.2.1"
jsonwebtoken = "9"
anyhow = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
argon2 = "0.5"
cookie = "0.18"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls", "debug-print"]}
rand = "0.9"
thiserror = "2.0.12"

[dependencies]
clap = { workspace = true, features = ["derive"] }
salvo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
validator = { workspace = true }
jsonwebtoken = { workspace = true }
anyhow = { workspace = true }
figment = { workspace = true }
cookie = { workspace = true }
argon2 = { workspace = true }
sea-orm = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
