[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["sea_orm_ext", "sea_orm_ext_macro", "system_models"]

[workspace.dependencies]
system_models = { path = "system_models" }
sea_orm_ext = { path = "sea_orm_ext" }
sea_orm_ext_macro = { path = "sea_orm_ext_macro" }

salvo = { version = "0.78", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
tokio = { version = "1", features = ["macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "time", "env-filter", "json"] }
clap = "4.5"
validator = { version = "0.20", features = ["derive"] }
jsonwebtoken = "9"
anyhow = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
argon2 = "0.5"
cookie = "0.18"
sea-orm = { version = "1.1", features = ["macros"] }
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v7"] }
rand = "0.9.1"
tracing-appender = "0.2.3"

[dependencies]
clap = { workspace = true, features = ["derive"] }
salvo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
jsonwebtoken = { workspace = true }
anyhow = { workspace = true }
figment = { workspace = true }
cookie = { workspace = true }
argon2 = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
thiserror = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
system_models = { workspace = true }
sea_orm_ext = { workspace = true }
tracing-appender = { workspace = true }
